--- a/elcss.css
+++ b/elcss.css
@@ -203,7 +203,7 @@ html {
 /* ********************************** */
 .banner {
 	background-image: linear-gradient(100deg, #000000, #00000020),
-		url('https://www.bolsadetrabajoss.com/wp-content/uploads/2018/05/agua-pura-salvavidas-empleos-1.png');
+		url('hombre.jpg');
 	height: 60rem;
 	background-size: cover;
 	background-position: center;
